<resources>
    <string name="arrow">＞</string>
    <string name="api_id">14f420dec5cf32d3c092fbe8a9f3ecb065e5473c9a16be79049131a7d0ea1bff</string>
    <string name="api_railways_info">https://api.tokyometroapp.jp/api/v2/datapoints</string>
    <string name="app_name">MetroCover</string>
    <string name="bound">bound</string>
    <string name="cancel">CANCEL</string>
    <string name="clock_am">AM</string>
    <string name="clock_pm">PM</string>
    <string name="clock_type">Clock Notation</string>
    <string name="clock_24">24-hour clock</string>
    <string name="clock_12">12-hour clock</string>
    <string name="close">CLOSE</string>
    <string name="colon">：</string>
    <string name="color_black">Black</string>
    <string name="color_metro">Metro</string>
    <string name="color_white">White</string>
    <string name="common_err">Sorry...Error Occurred</string>
    <string name="complete">COMPLETE</string>
    <string name="date_day">Day</string>
    <string name="date_month">Month</string>
    <string name="date_year">Year</string>
    <string name="day_of_week_monday">Mon.</string>
    <string name="day_of_week_tuesday">Tue.</string>
    <string name="day_of_week_wednesday">Wed.</string>
    <string name="day_of_week_thursday">Thu.</string>
    <string name="day_of_week_friday">Fri.</string>
    <string name="day_of_week_saturday">Sat.</string>
    <string name="day_of_week_sunday">Sun.</string>
    <string name="departure_time">%1$d:%2$ddeparture</string>
    <string name="enable_metrocover">Enable MetroCover</string>
    <string name="empty_title_lock_railway_info_title">TRAIN DELAY\nINFOMATION</string>
    <string name="empty_title_lock_railway_info_message">NO DATA</string>
    <string name="err_msg_picasa_img">You can\'t select Picasa Image</string>
    <string name="err_msg_offline">Please check network</string>
    <string name="font_free_wing">freewing.ttf</string>
    <string name="license">License</string>
    <string name="lock_clock_text_color">Clock Color</string>
    <string name="lock_get_calling">Calling</string>
    <string name="lock_matter"></string>
    <string name="lock_missed_call_number_withheld">Unknown call(s)</string>
    <string name="lock_missed_call_title">Missed call(s) : </string>
    <string name="lock_nothing">None</string>
    <string name="lock_password">Password</string>
    <string name="lock_input_password">Enter your password</string>
    <string name="lock_input_password_title">Enter your new password</string>
    <string name="lock_input_old_password">Enter your current password</string>
    <string name="lock_input_pass_one_more">Re-enter your password</string>
    <string name="lock_input_pass_minlength">Enter a password composed of 4 to 16 characters</string>
    <string name="lock_password_master">metrocover1_0_0</string>
    <string name="lock_pattern_confirm">Confirm</string>
    <string name="lock_pattern_next">Continue</string>
    <string name="lock_pattern_back">Retry</string>
    <string name="lock_pattern_master">869421753</string>
    <string name="lock_pattern_title_drawing">Release Finger When Finished</string>
    <string name="lock_pattern_title_miss_first_from_setting">Please Retry</string>
    <string name="lock_pattern_title_miss_first">Connect at least 4 dots. Try again:</string>
    <string name="lock_pattern_title_idle_from_setting">Confirm saved pattern</string>
    <string name="lock_pattern_title_idle_first">Draw your unlock pattern</string>
    <string name="lock_pattern_title_idle_second">Draw pattern again to confirm:</string>
    <string name="lock_pattern_title_success_first">Pattern recorded!</string>
    <string name="lock_pattern_title_success_second">Your new unlock pattern:([Confirm] pressed, this will be setted)</string>
    <string name="lock_pattern_input_miss">Wrong pattern. Please Retry</string>
    <string name="lock_patern">Pattern</string>
    <string name="lock_patern_vibe">Vibrate on touch</string>
    <string name="lock_patern_track">Use visible pattern</string>
    <string name="lock_security">Security</string>
    <string name="lock_security_high">Security Level - High</string>
    <string name="lock_security_none">Security Level - Low</string>
    <string name="lock_screen_image">Wallpapers</string>
    <string name="lock_screen_image_center">Center Wallpaper</string>
    <string name="lock_screen_image_left">Left Wallpaper</string>
    <string name="lock_screen_image_right">Right Wallpaper</string>
    <string name="lock_state_telinfo">State Calling:</string>
    <string name="lock_start_calling">Start Calling</string>
    <string name="lock_state_calling">Idle or Finish Calling</string>
    <string name="lock_system_security_setting">System Security</string>
    <string name="lock_wrong_pass">Wrong password</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="next">NEXT</string>
    <string name="no">NO</string>
    <string name="nothing">Nothing</string>
    <string name="ok">OK</string>
    <string name="paging_effect">Paging Effect</string>
    <string name="pkg_dodo_home_theme_head">com.campmobile.launcher.theme</string>
    <string name="pkg_plus_home_theme_head">jp.co.a_tm.android.plus_</string>
    <string name="pkg_homee_theme_head">com.cfinc.homee.themepack</string>
    <string name="pkg_buzz_home_theme_head">jp.co.yahoo.android.buzzhome.theme</string>
    <string name="pkg_line">jp.naver.line.android</string>
    <string name="railways">Railways</string>
    <string name="railway_chiyoda">Chiyoda-Line</string>
    <string name="railway_chiyoda_color">Chiyoda</string>
    <string name="railway_chiyoda_response">odpt.Railway:TokyoMetro.Chiyoda</string>
    <string name="railway_fukutoshin">Fukutoshin-Line</string>
    <string name="railway_fukutoshin_color">Fukutoshin</string>
    <string name="railway_fukutoshin_response">odpt.Railway:TokyoMetro.Fukutoshin</string>
    <string name="railway_ginza">Ginza-Line</string>
    <string name="railway_ginza_color">Ginza</string>
    <string name="railway_ginza_response">odpt.Railway:TokyoMetro.Ginza</string>
    <string name="railway_hanzomon">Hanzomon-Line</string>
    <string name="railway_hanzomon_color">Hanzomon</string>
    <string name="railway_hanzomon_response">odpt.Railway:TokyoMetro.Hanzomon</string>
    <string name="railway_hibiya">Hibiya-Line</string>
    <string name="railway_hibiya_color">Hibiya</string>
    <string name="railway_hibiya_response">odpt.Railway:TokyoMetro.Hibiya</string>
    <string name="railway_marunouchi">Marunouchi-Line</string>
    <string name="railway_marunouchi_m">Marunouchi-SubLine</string>
    <string name="railway_marunouchi_color">Marunouchi</string>
    <string name="railway_marunouchi_response">odpt.Railway:TokyoMetro.Marunouchi</string>
    <string name="railway_marunouchi_branch_response">odpt.Railway:TokyoMetro.MarunouchiBranch</string>
    <string name="railway_namboku">Namboku-Line</string>
    <string name="railway_namboku_color">Namboku</string>
    <string name="railway_namboku_response">odpt.Railway:TokyoMetro.Namboku</string>
    <string name="railway_tozai">Tozai-Line</string>
    <string name="railway_tozai_color">Tozai</string>
    <string name="railway_tozai_response">odpt.Railway:TokyoMetro.Tozai</string>
    <string name="railway_yurakucho">Yurakucho-Line</string>
    <string name="railway_yurakucho_color">Yurakucho</string>
    <string name="railway_yurakucho_response">odpt.Railway:TokyoMetro.Yurakucho</string>
    <string name="remaining_time_hour">h</string>
    <string name="remaining_time_minute">m</string>
    <string name="remaining_time_second">s after</string>
    <string name="review">Review</string>
    <string name="selected">Selected</string>
    <string name="settings">Settings</string>
    <string name="station">Station</string>
    <string name="station_info">Station\nInformation</string>
    <string name="station_direction_select_msg">Which do you\nwant to go to...</string>
    <string name="theme_homee_bg_image">theme_wallpaper</string>
    <string name="theme_homee_bg_image_allapps">pane_bg</string>
    <string name="theme_homee_bg_image_lock">theme_lock_bg</string>
    <string name="theme_plushome_bg_image">drawer_wallpaper</string>
    <string name="theme_dodol_bg_image">e7e</string>
    <string name="train_type_local">Local</string>
    <string name="train_type_local_response">odpt.TrainType:TokyoMetro.Local</string>
    <string name="train_type_express">Express</string>
    <string name="train_type_express_response">odpt.TrainType:TokyoMetro.Express</string>
    <string name="train_type_rapid">Rapid</string>
    <string name="train_type_rapid_response">odpt.TrainType:TokyoMetro.Rapid</string>
    <string name="train_type_limited_express">LimitedExpress</string>
    <string name="train_type_limited_express_response">odpt.TrainType:TokyoMetro.LimitedExpress</string>
    <string name="tutorial_select_railways">Check Lines\nYou Use Often.</string>
    <string name="tutorial_select_station">Select A Station\nYou Use Often.</string>
    <string name="tutorial_use_metrocover">USE IT!</string>
    <string name="wallpaper_complete_msg">Completed</string>
    <string name="wallpaper_delete_msg">Deleted</string>
    <string name="wallpaper_empty">No Wallpapers</string>
    <string name="wallpaper_now_loading">Now loading</string>
    <string name="wallpaper_homee_title">HOMEE\'S WALLPAPER</string>
    <string name="wallpaper_plushome_title">[+]HOME\'S WALLPAPER</string>
    <string name="wallpaper_dodol_title">Dodol\'S WALLPAPER</string>
    <string name="wallpaper_buzzhome_title">buzzHOME\'S WALLPAPER</string>
    <string name="wallpaper_select">Select Wallpaper</string>
    <string name="wallpaper_select_buzzhome">buzzHOME\'s Wallpaper</string>
    <string name="wallpaper_select_dodol">Dodol\'s Wallpaper</string>
    <string name="wallpaper_select_gallery">Gallery\'s Wallpaper</string>
    <string name="wallpaper_select_homee">Homee\'s Wallpaper</string>
    <string name="wallpaper_select_plushome">[+]HOME\'s Wallpaper</string>
    <string name="widget_name_railways_info">　Railways Info</string>
    <string name="yes">YES</string>
    <string name="direction_ginza_1">odpt.RailDirection:TokyoMetro.Asakusa</string>
    <string name="direction_ginza_2">odpt.RailDirection:TokyoMetro.Shibuya</string>
    <string name="direction_marunouchi_1">odpt.RailDirection:TokyoMetro.Ikebukuro</string>
    <string name="direction_marunouchi_2">odpt.RailDirection:TokyoMetro.Ogikubo</string>
    <string name="direction_marunouchi_branch_1">odpt.RailDirection:TokyoMetro.NakanoSakaue</string>
    <string name="direction_marunouchi_branch_2">odpt.RailDirection:TokyoMetro.Honancho</string>
    <string name="direction_hibiya_1">odpt.RailDirection:TokyoMetro.KitaSenju</string>
    <string name="direction_hibiya_2">odpt.RailDirection:TokyoMetro.NakaMeguro</string>
    <string name="direction_tozai_1">odpt.RailDirection:TokyoMetro.Nakano</string>
    <string name="direction_tozai_2">odpt.RailDirection:TokyoMetro.NishiFunabashi</string>
    <string name="direction_chiyoda_1">odpt.RailDirection:TokyoMetro.Ayase</string>
    <string name="direction_chiyoda_2">odpt.RailDirection:TokyoMetro.YoyogiUehara</string>
    <string name="direction_chiyoda_branch_1">odpt.RailDirection:TokyoMetro.KitaAyase</string>
    <string name="direction_chiyoda_branch_2">odpt.RailDirection:TokyoMetro.Ayase</string>
    <string name="direction_yurakucho_1">odpt.RailDirection:TokyoMetro.Wakoshi</string>
    <string name="direction_yurakucho_2">odpt.RailDirection:TokyoMetro.ShinKiba</string>
    <string name="direction_hanzomon_1">odpt.RailDirection:TokyoMetro.Shibuya</string>
</resources>