<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dip"
        android:layout_marginRight="14dip"
        android:background="#EFEFEF"
        android:orientation="vertical" >

        <!-- タイトル -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingLeft="6dip"
            android:paddingTop="15dip"
            android:text="@string/lock_security_title"
            android:textColor="#808080"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- パスワード -->

        <LinearLayout
            android:id="@+id/security_pass_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_upper_bg_selector"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_password"
                android:textColor="#333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_security_high"
                android:textColor="#333"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- セパレーター -->

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#CCC"
            android:contentDescription="@string/app_name" />

        <!-- パターン -->

        <LinearLayout
            android:id="@+id/security_patern_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_middle_bg_selector"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_patern"
                android:textColor="#333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_security_high"
                android:textColor="#333"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- セパレーター -->

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#CCC"
            android:contentDescription="@string/app_name" />

        <!-- なし -->

        <LinearLayout
            android:id="@+id/security_none_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_bottom_bg_selector"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_nothing"
                android:textColor="#333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_security_none"
                android:textColor="#333"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>