<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <!-- タイトル -->

    <metro.k.cover.view.TextViewWithFont
        android:id="@+id/security_pass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dip"
        android:text="@string/lock_input_password_title"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/security_pass_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@color/background_gray"
        android:gravity="center"
        android:inputType="textPassword"
        android:lineSpacingExtra="2dip"
        android:maxLength="16"
        android:paddingBottom="6dip"
        android:paddingTop="6dip"
        android:singleLine="true"
        android:textColor="@color/metro_main_color"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/security_pass_cancel_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dip"
            android:layout_weight="1"
            android:background="@drawable/selector_metro_tranceblue"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/cancel"
            android:textColor="#FFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/security_pass_complete_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5dip"
            android:layout_weight="1"
            android:background="@drawable/selector_metro_tranceblue"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/complete"
            android:textColor="#FFF"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>