<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray" >

    <LinearLayout
        android:id="@+id/tutorial_second_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tutorial_second_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/tutorial_select_railways"
            android:textColor="@color/metro_main_color"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <ListView
        android:id="@+id/tutorial_second_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tutorial_second_next_btn_layout"
        android:layout_below="@+id/tutorial_second_title_layout" />

    <LinearLayout
        android:id="@+id/tutorial_second_next_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tutorial_second_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dip"
            android:layout_marginTop="25dip"
            android:paddingBottom="5dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="5dip"
            android:text="@string/next"
            android:textColor="@color/metro_main_color"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>