<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="#FFF"
        android:orientation="vertical" >

        <!-- タイトル -->

        <metro.k.cover.view.TextViewWithFont
            android:id="@+id/lock_pass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="15dip"
            android:paddingLeft="30dip"
            android:paddingRight="30dip"
            android:paddingTop="15dip"
            android:text="@string/lock_input_password"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lock_pass_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/background_gray"
            android:gravity="center"
            android:inputType="textPassword"
            android:lineSpacingExtra="1dip"
            android:maxLength="16"
            android:paddingBottom="6dip"
            android:paddingTop="6dip"
            android:singleLine="true"
            android:textColor="@color/metro_main_color"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal"
            android:weightSum="2" >

            <metro.k.cover.view.ButtonWithFont
                android:id="@+id/lock_pass_cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="0.5dip"
                android:layout_weight="1"
                android:background="@drawable/selector_metro_tranceblue"
                android:gravity="center"
                android:paddingBottom="12dip"
                android:paddingTop="12dip"
                android:text="@string/cancel"
                android:textColor="#FFF"
                android:textStyle="bold" />

            <metro.k.cover.view.ButtonWithFont
                android:id="@+id/lock_pass_comp_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0.5dip"
                android:layout_weight="1"
                android:background="@drawable/selector_metro_tranceblue"
                android:gravity="center"
                android:paddingBottom="12dip"
                android:paddingTop="12dip"
                android:text="@string/ok"
                android:textColor="#FFF"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>